# binarychain-python

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  tox.toml
src/: binarychain.py
src/binarychain/: __init__.py  __main__.py
tests/: test_binarychain.py
