[project]
name = "binarychain"
description = "A simple but flexible binary container format, primarily meant for sending blocks of binary data over streaming interfaces like sockets. Similar to NetStrings, but for binary data."
version = "0.9.0"
authors = [
 {name = "Rasjid Wilcox", email = "rasjidw@openminddev.net"}
 ]

optional-dependencies.dev = [
    "pytest",
]
