[project]
name = "binarychain"
description = "A simple but flexible binary container format, primarily meant for sending blocks of binary data over streaming interfaces like sockets. Similar to NetStrings, but for binary data."
version = "0.9.2"
authors = [
 {name = "Rasjid Wilcox", email = "rasjidw@openminddev.net"}
 ]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"

optional-dependencies.dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
Homepage = "https://github.com/rasjidw/binarychain-python"
